--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                      class="logo__image"
                   />
                </a>
-               <form action="#" class="search">
+               <form action="#" class="search navbar__search">
                   <input
                      type="text"
                      class="search__input"
@@ -48,32 +48,40 @@
                <!-- /.user -->
             </div>
             <!-- /.navbar-top -->
-            <ul class="navbar-menu">
-               <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">All Deals</a>
-               </li>
-               <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Hotels</a>
-               </li>
-               <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Activities</a>
-               </li>
-               <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
-               </li>
-               <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Restaurants</a>
-               </li>
-               <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Events</a>
-               </li>
-               <li class="navbar-menu__item">
-                  <a href="#" class="navbar-menu__link">Rodrigues</a>
-               </li>
-            </ul>
-            <!-- /.navbar-menu -->
          </div>
          <!-- container -->
+         <div class="navbar-bottom">
+            <div class="container">
+               <ul class="navbar-menu">
+                  <li class="navbar-menu__item">
+                     <a href="#" class="navbar-menu__link">All Deals</a>
+                  </li>
+                  <li class="navbar-menu__item">
+                     <a href="#" class="navbar-menu__link">Hotels</a>
+                  </li>
+                  <li class="navbar-menu__item">
+                     <a href="#" class="navbar-menu__link">Activities</a>
+                  </li>
+                  <li class="navbar-menu__item">
+                     <a href="#" class="navbar-menu__link"
+                        >Hotel Day Packages</a
+                     >
+                  </li>
+                  <li class="navbar-menu__item">
+                     <a href="#" class="navbar-menu__link">Restaurants</a>
+                  </li>
+                  <li class="navbar-menu__item">
+                     <a href="#" class="navbar-menu__link">Events</a>
+                  </li>
+                  <li class="navbar-menu__item">
+                     <a href="#" class="navbar-menu__link">Rodrigues</a>
+                  </li>
+               </ul>
+               <!-- /.navbar-menu -->
+            </div>
+            <!-- /.container -->
+         </div>
+         <!-- /.navbar-bottom -->
       </header>
       <!-- /.header -->
    </body>
