create: breadcrumb and style

--- a/index.html
+++ b/index.html
@@ -89,5 +89,20 @@
          <!-- /.navbar-bottom -->
       </header>
       <!-- /.header -->
+      <nav class="breacrumb">
+         <div class="container">
+            <ul class="breacrumb-list">
+               <li class="breacrumb-list__item">
+                  <a class="breacrumb-list__link" href="#">Home</a>
+               </li>
+               <li class="breacrumb-list__item">
+                  <a class="breacrumb-list__link" href="#">Flash Offers</a>
+               </li>
+               <li class="breacrumb-list__item">Grand Hilton Hotel</li>
+            </ul>
+         </div>
+         <!-- /.container -->
+      </nav>
+      <!-- /.breacrumb -->
    </body>
 </html>
