--- a/index.html
+++ b/index.html
@@ -139,18 +139,30 @@
             <!-- /.hotel-info -->
             <div class="hotel-grid">
                <!-- Slider main container -->
-               <div class="swiper">
+               <div class="swiper hotel__swiper">
                   <!-- Additional required wrapper -->
                   <div class="swiper-wrapper">
                      <!-- Slides -->
                      <div class="swiper-slide">
-                        <img src="img/slide_1.jpg" alt="Slide" />
+                        <img
+                           class="swiper-slide__image"
+                           src="img/slide_1.jpg"
+                           alt="Slide"
+                        />
                      </div>
                      <div class="swiper-slide">
-                        <img src="img/slide_1.jpg" alt="Slide" />
+                        <img
+                           class="swiper-slide__image"
+                           src="img/slide_2.jpg"
+                           alt="Slide"
+                        />
                      </div>
                      <div class="swiper-slide">
-                        <img src="img/slide_1.jpg" alt="Slide" />
+                        <img
+                           class="swiper-slide__image"
+                           src="img/slide_3.jpg"
+                           alt="Slide"
+                        />
                      </div>
                   </div>
 
@@ -213,7 +225,7 @@
                   <div class="map">
                      <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2794.515322099248!2d98.29564498165385!3d7.890730597699535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30503b7bfcd9f903%3A0xf7065fac1e3d7c48!2sDoubleTree%20by%20Hilton%20Phuket%20Banthai%20Resort!5e0!3m2!1sru!2sua!4v1658170435420!5m2!1sru!2sua"
-                        width="347px"
+                        width="100%"
                         height="213px"
                         style="border: 0"
                         allowfullscreen=""
