create: added newslatter & responsive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
-         href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;700&display=swap"
+         href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&family=Nunito:wght@400;600;700&display=swap"
          rel="stylesheet"
       />
       <link rel="stylesheet" href="css/style.css" />
@@ -244,7 +244,7 @@
       <!-- /.hotel -->
       <section class="newsletter">
          <div class="newsletter-wrapper">
-            <h2 class="newsletter-title">
+            <h2 class="newsletter-title newsletter__title">
                subscribe to our
                <span class="newsletter-title__strong">Newsletter</span>
             </h2>
