create: adedd in html reviews section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
-         href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&family=Nunito:wght@400;600;700&display=swap"
+         href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700;900&family=Nunito:wght@400;600;700&display=swap"
          rel="stylesheet"
       />
       <link rel="stylesheet" href="css/style.css" />
@@ -266,7 +266,7 @@
       <!-- /.newsletter -->
       <section class="reviews">
          <div class="container">
-            <h2 class="section-title">What people think about us</h2>
+            <h2 class="reviews__title">What people think about us</h2>
             <div class="swiper reviews-slider">
                <div class="swiper-wrapper">
                   <div class="swiper-slide">
@@ -281,7 +281,7 @@
                            <span class="reviews-slider__date"
                               >Stayed 18 Nov, 2019</span
                            >
-                           <div class="rating">
+                           <div class="reviews-slider__rating">
                               <img src="img/star.svg" alt="star" />
                               <img src="img/star.svg" alt="star" />
                               <img src="img/star.svg" alt="star" />
@@ -291,15 +291,113 @@
                            <!-- /.rating -->
                         </div>
                         <!-- /.reviews-slider__profile -->
+                        <p class="reviews-slider__text">
+                           It was very nice hotel with cleanliness. Staff
+                           behavior was good and polite. They welcome us very
+                           well. Issue was only that Lift was not in working and
+                           we were allotted to 3rd floor and amenities articles
+                           were in corner of gallery which were giving bad
+                           feeling. Breakfast was good and support of the staff
+                           was also very nice. Location is not good as per
+                           atmosphere, it is very nearby most of the popular
+                           places but self location in a narrow street is not
+                           good. Overall it was a good experience and could
+                           recommend.
+                        </p>
                      </div>
                      <!-- /.reviews-slider__item -->
                   </div>
-                  <!-- /.swiper-slide -->
+                  <!-- /.swiper-slide 1-->
+                  <div class="swiper-slide">
+                     <div class="reviews-slider__item">
+                        <div class="reviews-slider__profile">
+                           <img
+                              src="img/reviews-avatar_2.jpg"
+                              alt="Photo: Chris Jay"
+                              class="reviews-slider__avatar"
+                           />
+                           <h3 class="reviews-slider__username">Chris Jay</h3>
+                           <span class="reviews-slider__date"
+                              >Stayed 1 Oct, 2021</span
+                           >
+                           <div class="reviews-slider__rating">
+                              <img src="img/star.svg" alt="star" />
+                              <img src="img/star.svg" alt="star" />
+                              <img src="img/star.svg" alt="star" />
+                              <img src="img/star.svg" alt="star" />
+                              <img src="img/star.svg" alt="star" />
+                           </div>
+                           <!-- /.rating -->
+                        </div>
+                        <!-- /.reviews-slider__profile -->
+                        <p class="reviews-slider__text">
+                           It was very nice hotel with cleanliness. Staff
+                           behavior was good and polite. They welcome us very
+                           well. Issue was only that Lift was not in working and
+                           we were allotted to 3rd floor and amenities articles
+                           were in corner of gallery which were giving bad
+                           feeling. Lorem ipsum dolor sit amet consectetur
+                           adipisicing elit. Rerum et similique at minus ab
+                           repudiandae ex perferendis reiciendis tempora quidem!
+                        </p>
+                     </div>
+                     <!-- /.reviews-slider__item -->
+                  </div>
+                  <!-- /.swiper-slide 2 -->
+                  <div class="swiper-slide">
+                     <div class="reviews-slider__item">
+                        <div class="reviews-slider__profile">
+                           <img
+                              src="img/reviews-avatar_3.jpg"
+                              alt="Photo: Robert Johns"
+                              class="reviews-slider__avatar"
+                           />
+                           <h3 class="reviews-slider__username">
+                              Robert Johns
+                           </h3>
+                           <span class="reviews-slider__date"
+                              >Stayed 20 Dec, 2018</span
+                           >
+                           <div class="reviews-slider__rating">
+                              <img src="img/star.svg" alt="star" />
+                              <img src="img/star.svg" alt="star" />
+                              <img src="img/star.svg" alt="star" />
+                              <img src="img/star.svg" alt="star" />
+                              <img src="img/star.svg" alt="star" />
+                           </div>
+                           <!-- /.rating -->
+                        </div>
+                        <!-- /.reviews-slider__profile -->
+                        <p class="reviews-slider__text">
+                           Lorem ipsum dolor sit amet consectetur adipisicing
+                           elit. Beatae consectetur facere sunt recusandae nam
+                           cumque. Nostrum maiores et neque cupiditate rem autem
+                           doloremque quod dignissimos. Odio iste aut laudantium
+                           qui, magnam cum est magni at incidunt tenetur.
+                           Aliquam est aliquid provident laudantium cupiditate,
+                           voluptas error mollitia nesciunt culpa deserunt
+                           repudiandae, consectetur quae ex accusamus pariatur
+                           corrupti quasi velit ipsa quod doloribus? Veniam aut
+                           neque nulla quae! Officiis facilis quidem soluta
+                           doloribus. Quam inventore voluptatibus eligendi nam
+                           esse culpa, optio sed, aperiam iure perspiciatis
+                           suscipit ipsam porro? Nulla, consequatur est. Dolore
+                           nam ratione, impedit ullam magnam incidunt placeat
+                           iusto tenetur quia.
+                        </p>
+                     </div>
+                     <!-- /.reviews-slider__item -->
+                  </div>
+                  <!-- /.swiper-slide 3 -->
                </div>
                <!-- /.swiper-wrapper -->
 
-               <div class="swiper-button-prev"></div>
-               <div class="swiper-button-next"></div>
+               <button
+                  class="reviews-slider__button reviews-slider__button--prev"
+               ></button>
+               <button
+                  class="reviews-slider__button reviews-slider__button--next"
+               ></button>
             </div>
             <!-- /.reviews-slider-->
          </div>
