create and fix media slider

--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
                      <!-- Slides -->
                      <div class="swiper-slide hotel-slider__item">
                         <img
-                           class="swiper-slide__image"
+                           class="swiper-slide__image hotel-slider__image"
                            src="img/slide_1.jpg"
                            alt="Slide"
                         />
                      </div>
                      <div class="swiper-slide hotel-slider__item">
                         <img
-                           class="swiper-slide__image"
+                           class="swiper-slide__image hotel-slider__image"
                            src="img/slide_2.jpg"
                            alt="Slide"
                         />
                      </div>
                      <div class="swiper-slide hotel-slider__item">
                         <img
-                           class="swiper-slide__image"
+                           class="swiper-slide__image hotel-slider__image"
                            src="img/slide_3.jpg"
                            alt="Slide"
                         />
