create: section packages & style this block

--- a/index.html
+++ b/index.html
@@ -246,6 +246,302 @@
          <!-- /.container -->
       </section>
       <!-- /.hotel -->
+      <section class="packages">
+         <div class="container">
+            <h2 class="packages__title">Other Packages</h2>
+            <div class="grid">
+               <div class="grid-card-1">
+                  <div class="grid-card-1__photo">
+                     <img
+                        class="grid__image--big"
+                        src="img/grid-image-1.jpg"
+                        alt="Photo: hotel-1"
+                     />
+                     <span class="grid-card-1__offer">Flash Offer</span>
+                  </div>
+                  <!-- /.grid-card-1__photo -->
+                  <div class="grid-card-1__info">
+                     <div class="grid__rating">
+                        <img src="img/star.svg" alt="star" />
+                        <img src="img/star.svg" alt="star" />
+                        <img src="img/star.svg" alt="star" />
+                        <img src="img/star.svg" alt="star" />
+                        <img src="img/star.svg" alt="star" />
+                     </div>
+                     <!-- /.rating -->
+                     <h3 class="grid-card-1__title">Hotel Blue Haven</h3>
+                     <p class="grid-card-1__text">
+                        Aute quis duis excepteur excepteur ipsum cat eiusmod
+                        consectetur enim laborum magna llit. Ipsum est fugiat
+                        velit ea llamco do esse ut in veniam sun in onsequat.
+                        Aute quis duis epteur excepteur ipsum occaecat eiusmod
+                        nsectetur enim laborum magna mollit. Ipsum est fugiat
+                        velit ea ullamco do
+                     </p>
+                     <div class="room grid__room">
+                        <div class="room__info">
+                           <img
+                              src="img/map-pin.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text"
+                              >1749 Wheeler Ridge Delaware</span
+                           >
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/user.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">2 x Guests</span>
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/home.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">1 x Room</span>
+                        </div>
+                        <!-- /.room__info -->
+                     </div>
+                     <!-- /.room -->
+                     <span class="prie-old">$ 10,500</span>
+                     <div class="price">
+                        <span class="price__new">$ 8,500</span>
+                        <button href="#" class="price__button">Book Now</button>
+                     </div>
+                     <!-- /.price -->
+                  </div>
+                  <!-- /.grid-card-1__text -->
+               </div>
+               <!-- /.grid__card-1 -->
+               <div class="grid-card">
+                  <div class="grid-card__photo">
+                     <img
+                        src="img/grid-image-2.jpg"
+                        alt="Photo: hotel-2"
+                        class="grid-card__image"
+                     />
+                     <span class="grid-card__offer">Flash Offer</span>
+                  </div>
+                  <!-- /.grid-card__photo -->
+                  <div class="grid-card__info">
+                     <h3 class="grid-card__title">LUX* Belle Mare</h3>
+                     <div class="room grid-card__room">
+                        <div class="room__info">
+                           <img
+                              src="img/map-pin.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text"
+                              >1749 Wheeler Ridge Delaware</span
+                           >
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/user.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">2 x Guests</span>
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/home.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">1 x Room</span>
+                        </div>
+                        <!-- /.room__info -->
+                     </div>
+                     <!-- /.room -->
+                     <span class="prie-old">$ 10,500</span>
+                     <div class="price">
+                        <span class="price__new">$ 8,500</span>
+                        <button href="#" class="price__button">Book Now</button>
+                     </div>
+                     <!-- /.price -->
+                  </div>
+                  <!-- /.grid-card__info -->
+               </div>
+               <!-- /.grid__card-2 -->
+               <div class="grid-card">
+                  <div class="grid-card__photo">
+                     <img
+                        src="img/grid-image-3.jpg"
+                        alt="Photo: hotel-2"
+                        class="grid-card__image"
+                     />
+                     <span class="grid-card__offer">Flash Offer</span>
+                  </div>
+                  <!-- /.grid-card__photo -->
+                  <div class="grid-card__info">
+                     <h3 class="grid-card__title">White Palace</h3>
+                     <div class="room grid-card__room">
+                        <div class="room__info">
+                           <img
+                              src="img/map-pin.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text"
+                              >1749 Wheeler Ridge Delaware</span
+                           >
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/user.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">2 x Guests</span>
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/home.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">1 x Room</span>
+                        </div>
+                        <!-- /.room__info -->
+                     </div>
+                     <!-- /.room -->
+                     <span class="prie-old">$ 10,500</span>
+                     <div class="price">
+                        <span class="price__new">$ 9,500</span>
+                        <button href="#" class="price__button">Book Now</button>
+                     </div>
+                     <!-- /.price -->
+                  </div>
+                  <!-- /.grid-card__info -->
+               </div>
+               <!-- /.grid__card-3 -->
+               <div class="grid-card">
+                  <div class="grid-card__photo">
+                     <img
+                        src="img/grid-image-4.jpg"
+                        alt="Photo: hotel-2"
+                        class="grid-card__image"
+                     />
+                     <span class="grid-card__offer">Flash Offer</span>
+                  </div>
+                  <!-- /.grid-card__photo -->
+                  <div class="grid-card__info">
+                     <h3 class="grid-card__title">Luxury Place</h3>
+                     <div class="room grid-card__room">
+                        <div class="room__info">
+                           <img
+                              src="img/map-pin.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text"
+                              >1749 Wheeler Ridge Delaware</span
+                           >
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/user.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">2 x Guests</span>
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/home.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">1 x Room</span>
+                        </div>
+                        <!-- /.room__info -->
+                     </div>
+                     <!-- /.room -->
+                     <span class="prie-old">$ 4,500</span>
+                     <div class="price">
+                        <span class="price__new">$ 2,500</span>
+                        <button href="#" class="price__button">Book Now</button>
+                     </div>
+                     <!-- /.price -->
+                  </div>
+                  <!-- /.grid-card__info -->
+               </div>
+               <!-- /.grid__card-4 -->
+               <div class="grid-card">
+                  <div class="grid-card__photo">
+                     <img
+                        src="img/grid-image-5.jpg"
+                        alt="Photo: hotel-2"
+                        class="grid-card__image"
+                     />
+                     <span class="grid-card__offer">Flash Offer</span>
+                  </div>
+                  <!-- /.grid-card__photo -->
+                  <div class="grid-card__info">
+                     <h3 class="grid-card__title">Luxury Place</h3>
+                     <div class="room grid-card__room">
+                        <div class="room__info">
+                           <img
+                              src="img/map-pin.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text"
+                              >1749 Wheeler Ridge Delaware</span
+                           >
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/user.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">2 x Guests</span>
+                        </div>
+                        <!-- /.room__info -->
+                        <div class="room__info">
+                           <img
+                              src="img/home.svg"
+                              alt="map-pin"
+                              class="room__image"
+                           />
+                           <span class="room__text">1 x Room</span>
+                        </div>
+                        <!-- /.room__info -->
+                     </div>
+                     <!-- /.room -->
+                     <span class="prie-old">$ 6,500</span>
+                     <div class="price">
+                        <span class="price__new">$ 3,500</span>
+                        <button href="#" class="price__button">Book Now</button>
+                     </div>
+                     <!-- /.price -->
+                  </div>
+                  <!-- /.grid-card__info -->
+               </div>
+               <!-- /.grid__card-5 -->
+            </div>
+            <!-- /.grid -->
+         </div>
+         <!-- /.container -->
+      </section>
+      <!-- /.packages -->
       <section
          class="newsletter"
          data-image-src="img/newsletter-bg.jpg"
