--- a/index.html
+++ b/index.html
@@ -759,6 +759,20 @@
          <!-- /.container -->
       </section>
       <!-- /.activities -->
+      <section class="footer">
+         <div class="container">
+            <div class="footer-wrapper">
+               <img
+                  src="img/vertical-logo.svg"
+                  alt="Best tour plan"
+                  class="logo footer__logo"
+               />
+            </div>
+            <!-- /.footer-wrapper -->
+         </div>
+         <!-- /.container -->
+      </section>
+      <!-- /.footer -->
       <script src="js/swiper-bundle.min.js"></script>
       <script src="js/main.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
