--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </head>
 
    <body>
-      <header class="navbar">
+      <header class="navbar navbar--mobile-fixed">
          <div class="container">
             <div class="navbar-top">
                <a href="#" class="logo">
@@ -27,7 +27,10 @@
                      class="logo__image"
                   />
                </a>
-               <form action="#" class="search navbar__search">
+               <form
+                  action="#"
+                  class="search navbar__search navbar__search--mobile-hidden"
+               >
                   <input
                      type="text"
                      class="search__input"
@@ -38,7 +41,10 @@
                   </button>
                </form>
 
-               <a href="#" class="user navbar__user">
+               <a
+                  href="#"
+                  class="user navbar__user navbar__user--mobile-hidden"
+               >
                   <img
                      src="img/user-avatar.jpg"
                      alt="Avatar: Nathan"
@@ -59,6 +65,38 @@
          <div class="navbar-bottom">
             <div class="container">
                <ul class="navbar-menu">
+                  <li
+                     class="navbar-menu__item navbar-menu__item--mobile-visible"
+                  >
+                     <a
+                        href="#"
+                        class="user navbar__user navbar__user--mobile-visible"
+                     >
+                        <img
+                           src="img/user-avatar.jpg"
+                           alt="Avatar: Nathan"
+                           class="user__avatar"
+                        />
+                        <span class="user__name user__name--light">Nathan</span>
+                     </a>
+                  </li>
+                  <li
+                     class="navbar-menu__item navbar-menu__item--mobile-visible"
+                  >
+                     <form
+                        action="#"
+                        class="search navbar__search navbar__search--mobile-visible"
+                     >
+                        <input
+                           type="text"
+                           class="search__input"
+                           placeholder="Search Location |"
+                        />
+                        <button class="search__button">
+                           <img src="img/search.svg" alt="Icon: search" />
+                        </button>
+                     </form>
+                  </li>
                   <li class="navbar-menu__item">
                      <a href="#" class="navbar-menu__link">All Deals</a>
                   </li>
@@ -959,5 +997,6 @@
       <script src="js/main.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
       <script src="js/parallax.js"></script>
+      <script src="js/paralax.js"></script>
    </body>
 </html>
