--- a/index.html
+++ b/index.html
@@ -922,6 +922,12 @@
             placeholder="Phone Number*"
             name="phone"
           />
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Your email*"
+            name="email"
+          />
           <textarea
             class="message modal__message"
             placeholder="Message"
@@ -954,6 +960,12 @@
             class="input modal__input"
             placeholder="Phone Number*"
             name="phone"
+          />
+          <input
+            type="text"
+            class="input modal__input"
+            placeholder="Your email*"
+            name="email"
           />
           <textarea
             class="message modal__message"
